; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/phison/extr_phison.c_phison_pre_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/phison/extr_phison.c_phison_pre_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_link = type { %struct.ata_port* }
%struct.ata_port = type { i32, i32 }

@ATA_CBL_NONE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"phison_pre_reset(), ret = %x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ata_link*, i64)* @phison_pre_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @phison_pre_reset(%struct.ata_link* %0, i64 %1) #0 {
  %3 = alloca %struct.ata_link*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ata_port*, align 8
  store %struct.ata_link* %0, %struct.ata_link** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.ata_link*, %struct.ata_link** %3, align 8
  %8 = getelementptr inbounds %struct.ata_link, %struct.ata_link* %7, i32 0, i32 0
  %9 = load %struct.ata_port*, %struct.ata_port** %8, align 8
  store %struct.ata_port* %9, %struct.ata_port** %6, align 8
  %10 = load i32, i32* @ATA_CBL_NONE, align 4
  %11 = load %struct.ata_port*, %struct.ata_port** %6, align 8
  %12 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.ata_link*, %struct.ata_link** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @ata_std_prereset(%struct.ata_link* %13, i64 %14)
  store i32 %15, i32* %5, align 4
  %16 = load %struct.ata_port*, %struct.ata_port** %6, align 8
  %17 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @dev_dbg(i32 %18, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i32 @ata_std_prereset(%struct.ata_link*, i64) #1

declare dso_local i32 @dev_dbg(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
